--- a/packages/desktop/aegisub.desktop.template.in
+++ b/packages/desktop/aegisub.desktop.template.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-_Name=Aegisub
-_GenericName=Subtitle Editor
-_Comment=Create and edit subtitles for film and videos.
-Exec=@AEGISUB_COMMAND@ %f
+Name=Aegisub
+GenericName=Subtitle Editor
+Comment=Create and edit subtitles for film and videos.
+Exec=env GDK_BACKEND=x11 @AEGISUB_COMMAND@ %f
 TryExec=@AEGISUB_COMMAND@
 Icon=aegisub
 Terminal=false
