Use AviSynth from system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -512,11 +512,13 @@ if (ALSA_FOUND)
     target_sources(Aegisub PRIVATE src/audio_player_alsa.cpp)
 endif(ALSA_FOUND)
 
-if (WIN32)
-target_compile_definitions(Aegisub PRIVATE "WITH_AVISYNTH")
-target_link_libraries(Aegisub Vfw32)
-target_sources(Aegisub PRIVATE src/audio_provider_avs.cpp src/avisynth_wrap.cpp src/video_provider_avs.cpp)
-endif (WIN32)
+find_package(AviSynth)
+if (AviSynth_FOUND)
+    target_compile_definitions(Aegisub PRIVATE "WITH_AVISYNTH" "AVS_LINKAGE_DLLIMPORT")
+    target_include_directories(Aegisub PRIVATE ${AviSynth_INCLUDE_DIRS})
+    target_link_libraries(Aegisub Vfw32 ${AviSynth_LIBRARIES})
+    target_sources(Aegisub PRIVATE src/audio_provider_avs.cpp src/avisynth_wrap.cpp src/video_provider_avs.cpp)
+endif (AviSynth_FOUND)
 
 target_compile_definitions(Aegisub PRIVATE "WITH_CSRI")
 target_sources(Aegisub PRIVATE src/subtitles_provider_csri.cpp)
