Fix Makefile build
A missing header (acconf.h) issue was introduced in 256ba234858cb4baaf4ce4ca7ef3fa071bb9da78
In 033b55de6e3b6c61dfeb7b15fe6ce993c8198ae1, some new source files have been added but not added to the file list in Makefile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ elseif(WIN32)
     )
 endif(UNIX)
 SET_TARGET_PROPERTIES(libaegisub PROPERTIES PREFIX "")
+target_compile_definitions(libaegisub PRIVATE CMAKE_BUILD)
 
 add_library(luabins STATIC
     vendor/luabins/src/fwrite.c
@@ -428,6 +429,7 @@ add_executable(Aegisub WIN32
     src/visual_feature.cpp
 )
 target_link_libraries(Aegisub ${CMAKE_DL_LIBS} libaegisub luabins luajit resrc csri)
+target_compile_definitions(Aegisub PRIVATE CMAKE_BUILD)
 
 if (MSVC)
     set_target_properties(libaegisub PROPERTIES COMPILE_FLAGS "/Yu${PROJECT_SOURCE_DIR}/libaegisub/lagi_pre.h" COMPILE_FLAGS "/FI${PROJECT_SOURCE_DIR}/libaegisub/lagi_pre.h")
