--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -577,7 +577,7 @@ endif(uchardet_FOUND)
 if (NOT WIN32)
 set(AEGISUB_COMMAND "aegisub" CACHE STRING "The executable name of Aegisub")
 set_target_properties(Aegisub PROPERTIES OUTPUT_NAME aegisub)
-configure_file("packages/desktop/aegisub.desktop.template.in" "aegisub.desktop" @ONLY)
+configure_file("packages/desktop/aegisub.desktop.template.cmake.in" "aegisub.desktop" @ONLY)
 install(FILES "${CMAKE_BINARY_DIR}/aegisub.desktop" DESTINATION "share/applications")
 install(FILES "packages/desktop/16x16.png" DESTINATION "share/icons/hicolor/16x16/apps" RENAME aegisub.png)
 install(FILES "packages/desktop/22x22.png" DESTINATION "share/icons/hicolor/22x22/apps" RENAME aegisub.png)
