--- a/packages/desktop/aegisub.desktop.template.in
+++ b/packages/desktop/aegisub.desktop.template.in
@@ -9,5 +9,7 @@ TryExec=@AEGISUB_COMMAND@
 Icon=aegisub
 Terminal=false
 Categories=AudioVideo;AudioVideoEditing;
+Keywords=subtitles;subtitle;captions;captioning;video;audio;
 MimeType=application/x-srt;text/plain;text/x-ass;text/x-microdvd;text/x-ssa;
 StartupNotify=true
+StartupWMClass=aegisub
