Stop using deprecated hunspell API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -547,6 +547,9 @@ if (HUNSPELL_FOUND)
     target_link_libraries (Aegisub ${HUNSPELL_LIBRARIES})
     add_definitions("-DWITH_HUNSPELL")
     target_sources(Aegisub PRIVATE src/spellchecker_hunspell.cpp)
+    if (HUNSPELL_HAS_STRING_API)
+        target_compile_definitions(Aegisub PRIVATE "HUNSPELL_HAS_STRING_API")
+    endif(HUNSPELL_HAS_STRING_API)
 endif (HUNSPELL_FOUND)
 
 find_package(PulseAudio)
