--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ script:
     ./build/version.sh .;
     mkdir build-dir;
     cd build-dir;
-    cmake -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wno-unused-parameter -pedantic' ..;
+    cmake -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wno-unused-parameter -pedantic' -DCMAKE_C_FLAGS='-Wall' -DWITH_STARTUPLOG=ON ..;
     make -j2;
   fi
 
