--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ git:
 addons:
   apt:
     sources:
-      - sourceline: 'deb https://apt.kitware.com/ubuntu/ xenial main'
+      - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
         key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
     packages:
     - libasound2-dev
@@ -23,12 +23,13 @@ addons:
     - libboost-all-dev
     - libffms2-dev
     - libfontconfig1-dev
-    - libalut-dev
+    - libopenal-dev
     - libuchardet-dev
     - libwxgtk3.0-dev
     - portaudio19-dev
     - libpulse-dev
     - autopoint
+    - libgtest-dev
 
 matrix:
   include:
@@ -45,6 +46,11 @@ install:
     sudo pip install -U cpp-coveralls;
     git submodule --quiet init;
     git submodule --quiet update vendor/googletest;
+  else
+    pushd /usr/src/googletest;
+    sudo cmake .;
+    sudo make install -j2;
+    popd;
   fi
 
 script:
@@ -52,7 +58,7 @@ script:
     export CPPFLAGS="-fprofile-arcs -ftest-coverage";
     export LIBS="-lgcov";
     ./autogen.sh;
-    ./configure --enable-debug || cat config.log;
+    ./configure --enable-debug agi_cv_with_openal=yes || cat config.log;
     make -j2;
     make test || travis_terminate 1;
     coveralls --exclude vendor --exclude src --exclude build --exclude tools --exclude libaegisub/windows > /dev/null;
@@ -60,8 +66,9 @@ script:
     ./build/version.sh .;
     mkdir build-dir;
     cd build-dir;
-    cmake -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wno-unused-parameter -pedantic' -DCMAKE_C_FLAGS='-Wall' -DWITH_STARTUPLOG=ON ..;
+    cmake -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wno-unused-parameter -pedantic' -DCMAKE_C_FLAGS='-Wall' -DWITH_STARTUPLOG=ON -DWITH_TEST=ON ..;
     make -j2;
+    make test || travis_terminate 1;
   fi
 
 notifications:
