--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ script:
     export LIBS="-lgcov";
     ./autogen.sh;
     ./configure --enable-debug || cat config.log;
-    make -j2;
+    make -j2 || travis_terminate 1;
     make test || travis_terminate 1;
     coveralls --exclude vendor --exclude src --exclude build --exclude tools --exclude libaegisub/windows > /dev/null;
   else
@@ -71,7 +71,7 @@ script:
     mkdir build-dir;
     cd build-dir;
     cmake -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wno-unused-parameter -pedantic' -DCMAKE_C_FLAGS='-Wall' -DWITH_STARTUPLOG=ON -DWITH_TEST=ON ..;
-    make -j2;
+    make -j2 || travis_terminate 1;
     make test || travis_terminate 1;
   fi
 
