Added experimental XAudio2 audio player
Removed downsampling in FFMS2 and CreateConvertAudioProvider, to ensure we can get the original audio channels and data.

Fix Aegisub/Aegisub#160

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -572,9 +572,9 @@ if(WITH_CSRI)
 endif()
 
 if(WIN32)
-    target_compile_definitions(Aegisub PRIVATE "WITH_DIRECTSOUND")
+    target_compile_definitions(Aegisub PRIVATE "WITH_DIRECTSOUND" "WITH_XAUDIO2")
     target_link_libraries(Aegisub dsound)
-    target_sources(Aegisub PRIVATE src/audio_player_dsound.cpp src/audio_player_dsound2.cpp)
+    target_sources(Aegisub PRIVATE src/audio_player_dsound.cpp src/audio_player_dsound2.cpp src/audio_player_xaudio2.cpp)
     set(WITH_DIRECTSOUND ON)
 else()
     set(WITH_DIRECTSOUND OFF)
